--- a/Status.Web/Status.Web.csproj
+++ b/Status.Web/Status.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Config\AppSettings.json" />
+    <None Include="Config\AppSettings.json" CopyToPublishDirectory="Always"/>
     <None Include="wwwroot\Assets\CSS\Main.css" />
     <None Include="wwwroot\Assets\JavaScript\JQuery.js" />
   </ItemGroup>
