--- a/Status.Web/Config/AppSettings.json
+++ b/Status.Web/Config/AppSettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings":
   {
-    "status.kragghc.dk":"Data Source=kragghc.dk;Initial Catalog=status.kragghc.dk;persist security info=True;user id=status.kragghc.dk;password=kdg45wvr"
+    "status.kragghc.dk": "Data Source=kragghc.dk;Initial Catalog=status.kragghc.dk;persist security info=True;user id=status.kragghc.dk;password=kdg45wvr",
+    "azure.aspiri.dk": "Data Source=play.aspiri.dk;Initial Catalog=azure.aspiri.dk;persist security info=True;user id=azure.aspiri.dk;password=S#ba!%xKSTQRE@4OvWAD@vRWt0AFfcyp"
   }
 }
